2003-12-14  Junichi Uekawa  <dancer@debian.org>

	* Documentation/pbuilder-doc.xml (EXTRAPACKAGES): add notes on debconf inside pbuilder.

2003-12-11  Junichi Uekawa  <dancer@debian.org>

	* debuild-pbuilder.1: fix document formatting error, from Roland Stigge.

	* pbuilder-runhooks (hooks): Try and detect file name non-matching case 
	for hooks, from Dale Amon.

2003-11-28    <dancer@zaurus>

	* Documentation/pbuilder-doc.xml: update

2003-11-27  Junichi Uekawa  <dancer@debian.org>

	* debian/control (Conflicts): add conflicts against old bash.
	unset fails.

2003-11-21  Junichi Uekawa  <dancer@debian.org>

	* Documentation/pbuilder-doc.xml (EXTRAPACKAGES): add notes on fakechroot.

2003-11-16  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-user-mode-linux: preen fsck.
	comment out fsck bit, it's too slow.

	* THANKS: add 

	* pbuilder-runhooks: fix warning messages to be more correct, thanks
	to Daniel Martin.

2003-11-11  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-modules (pbuilder-options): reorder umount and mount so that 
	dev, devpts, proc is done in that order.

2003-11-09  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-user-mode-linux: Do no hard-fail if I fail to fsck; 
	fsck isn't really a requirement.

2003-11-08  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-user-mode-linux: add fsck

2003-11-06  Junichi Uekawa  <dancer@debian.org>

	* pdebuild-user-mode-linux.1: update documentation.

	* pdebuild.1: typographical fix.

	* pdebuild-user-mode-linux (ARCHITECTURE): update to support --configfile option.

2003-10-29  Junichi Uekawa  <dancer@debian.org>

	* debian/TODO: note the memo.

	* elmo.txt: note on apt.

2003-10-28  Junichi Uekawa  <dancer@debian.org>

	* pdebuild.1: pbuilder will use the config file that is specified
	as pdebuild command-line.

	* pdebuild (ARCHITECTURE): Add --configfile to the call to pbuilder 
	invocation.

	* pbuilder-checkparams (IGNORE_UMOUNT): EXTRA_CONFIGFILE is an array