@@ -1,6 +1,7 @@
 pbuilder (0.96) UNRELEASED; urgency=low
 
   * Update documentation on using debconf inside pbuilder.
+    Note in FAQ that /dev/null error comes from 'nodev' mount option.
 
  -- Junichi Uekawa <dancer@debian.org>  Sun, 14 Dec 2003 22:17:30 +0900
 
