@@ -1,3 +1,7 @@
+2003-12-15  Junichi Uekawa  <dancer@debian.org>
+
+	* Documentation/pbuilder-doc.xml (EXTRAPACKAGES): document problem with /dev/null
+
 2003-12-14  Junichi Uekawa  <dancer@debian.org>
 
 	* Documentation/pbuilder-doc.xml (EXTRAPACKAGES): add notes on debconf inside pbuilder.
